--- a/flaskapp/templates/test-dashboard-mill.html
+++ b/flaskapp/templates/test-dashboard-mill.html
@@ -88,6 +88,19 @@ Mill Vehicle Data Entry
                                                             </select>
                                                     </div>                                                
                                             </div>
+                                        
+                                            <div class="form-group form-row">
+                                                    <label class="col-form-label">Department to:</label>
+                                                <div class="col">
+                                                        <select class="form-control" name="vehicletype">
+                                                                {% for d in departments %}
+                                                                <option value={{type.id}}>
+                                                                    {{d.department_name}}
+                                                                </option>
+                                                                {% endfor %}
+                                                            </select>
+                                                </div>      
+                                            </div>
                                         <!-- Company vehicle Out Time Input-->
                                         
                                     <div class="form-group">
@@ -104,6 +117,7 @@ Mill Vehicle Data Entry
                                             <table class="mb-0   table table-borderless table-sm table-hover">
                                                     <thead>
                                                         <th>Vehicle No</th>
+                                                        <th>Department</th>
                                                         <th>Out Time</th>
                                                         <th>In Time</th>
                                                         <th>Actions</th>
@@ -114,7 +128,7 @@ Mill Vehicle Data Entry
                                                                 
                                                                 <td><strong>{{v.comp_timesheet.comp_vehicle_no}}</strong><span>
                                                                         ({{v.comp_timesheet.model_name}})</span></td>
-                                                                
+                                                                <td>{{v.mill_dept.department_name}}</td>
                                                                 <td>{{v.OutTime}}</td>
                                                                 
                                                                     <input type="hidden" value="{{v.id}}" name="vid">
