--- a/flaskapp/templates/test-dashboard-mill.html
+++ b/flaskapp/templates/test-dashboard-mill.html
@@ -92,9 +92,9 @@ Mill Vehicle Data Entry
                                             <div class="form-group form-row">
                                                     <label class="col-form-label">Department to:</label>
                                                 <div class="col">
-                                                        <select class="form-control" name="vehicletype">
+                                                        <select class="form-control" name="dept">
                                                                 {% for d in departments %}
-                                                                <option value={{type.id}}>
+                                                                <option value={{d.id}}>
                                                                     {{d.department_name}}
                                                                 </option>
                                                                 {% endfor %}
