Updated Visitor Entry with autofill data list

--- a/flaskapp/templates/printformat.html
+++ b/flaskapp/templates/printformat.html
@@ -15,7 +15,7 @@
      <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">
 </head>
 
-<body class="container">
+<body class="">
     <div class="m-4 p-2 border border-dark">
             <div class="main-border w-auto">
                     <div class="mt-3" id="company-name">
