--- a/flaskapp/templates/test-dashboard-mill.html
+++ b/flaskapp/templates/test-dashboard-mill.html
@@ -49,7 +49,7 @@ Mill Vehicle Data Entry
   <div class="row">
         
                 <div class="col-4">  
-                    <div class="card">
+                    <div style="position: fixed;" class="card ml-4">
                         <!--Company Vehicle Form-->
                         <h5 class="card-header">
                             Company Vehicle Data Entry
