--- a/flaskapp/templates/test-dashboard-postformat.html
+++ b/flaskapp/templates/test-dashboard-postformat.html
@@ -47,7 +47,7 @@ Visitor Data Entry
 
 
         <div class="col-3">
-            <div class="card">
+            <div style="position: fixed;" class="card ml-3">
                 <h4 class="card-header text-center">Data Entry</h4>
                 <div class="card-body p-2" >
                     <form id="visitorform" action="/test-postformat/visitor" method="POST" class="form ">
@@ -58,35 +58,32 @@ Visitor Data Entry
                                         <input type="date" class="form-control" id="date" name="entrydate" value="{{today_date}}" autofocus required>
                                 
                             </div>
-                        
-
-                            <div class="form-group form-row mb-2">
-                                <label class="col-form-label" for="intime">In Time:</label>
-                               
-                                        <input name="intime" class="form-control" type="time" value="{{today_time}}">
-                                
-                            </div>
-                        
-
-
 
                         <div class="form-row form-group mb-2">
                             <label class="sr-only" for="name">Visitor Name:</label>
-                                    <input style="text-transform:uppercase;" placeholder="Visitor Name" type="text" class="form-control"
+                                    <input  list="visitorlist" style="text-transform:uppercase;" placeholder="Visitor Name" class="form-control"
                                     id="name" name="visitorname" required>
+
+                                    <datalist id="visitorlist">
+                                        
+                                        {% for v in visitors %}
+                                            <option id="vilist{{v.id}}" data-p="{{v.place_from}}" data-attribute="{{v.contact}}" value="{{v.name}}">{{v.id}}-{{v.contact}} </option>
+                                        {% endfor %}
+                                    
+                                    </datalist>
                         </div>
 
                         <!-- Visitor Contact Input-->
                         <div class="form-row form-group mb-2">
                             <label class="sr-only" for="visitorcontact">Contact No: </label>
-                            <input name="visitorcontact" type="tel" class="form-control"
+                            <input id="contact" name="visitorcontact" type="tel" class="form-control"
                                 placeholder="Visitor Contact No.">
                         </div>
 
                         <!--Visitor Compnay -->
                         <div class="form-row form-group mb-2">
                             <label class="sr-only" for="visitorcompnay">Company From: </label>
-                            <input style="text-transform:uppercase;" name="visitorcompany" class="form-control"
+                            <input id=placefrom style="text-transform:uppercase;" name="visitorcompany" class="form-control"
                                 type="text" placeholder="Visitor Company" required>
                         </div>
 
@@ -106,10 +103,16 @@ Visitor Data Entry
                             <input style="text-transform:uppercase;" name="visitingpurpose" class="form-control"
                                 type="text" placeholder="Visiting Purpose">
                         </div>
+                        <div class="form-group form-row mb-2">
+                                <label class="col-form-label" for="intime">In Time:</label>
+                               
+                                        <input name="intime" class="form-control" type="time" value="{{today_time}}">
+                                
+                            </div>
                         <div class="form-group mb-2">
                             <input type="submit" class="btn btn-primary btn-block">
                         </div>
-
+                       
                     </form>
                 </div>
             </div>
@@ -179,6 +182,15 @@ Visitor Data Entry
 
 {% endblock %}
 
-{% block scripts %}
-
+{% block script %}
+    <script>
+        $('input[name=visitorname]').focusout(function(){
+            var val = $(this).val();
+           var number = $('#visitorlist [value="' + val + '"]').data('attribute');
+           
+           $('#contact').val(number)
+           var place = $('#visitorlist [value="' + val + '"]').data('p');
+           $('#placefrom').val(place)
+        });
+    </script>
 {% endblock %}
