--- a/flaskapp/templates/test-dashboard-vehicles.html
+++ b/flaskapp/templates/test-dashboard-vehicles.html
@@ -47,7 +47,7 @@ Outside Vehicle Data Entry
   <div class="row">
         
                 <div class="col-4"> 
-                    <div class="card">
+                    <div style="position: fixed;" class="card ml-4">
                             <h5 class="card-header">
                                     Outside Vehicle Data Entry 
                                 </h5>
