--- a/flaskapp/templates/test-dashboard.html
+++ b/flaskapp/templates/test-dashboard.html
@@ -98,7 +98,7 @@
 <body>
 
     <nav style="height: 60px;" class="fixed-top text-dark navbar navbar-dark bg-light flex-md-nowrap border-bottom ">
-        <p  style="font-weight: 400;" class="p-3 lead h5">Visitor Management System</p>
+             <p  style="font-weight: 400;" class="p-3 lead h5"><img class="mr-3" src="{{url_for('static', filename='images/favicon.png')}}" />Visitor Management System</p>
        <!--  <form id="navbarSearchForm" class="navbar-form form-row  justify-content-center" role="search" action="{{url_for('search.search_main')}}">
             <div class="col-md-5 col-sm-4">
                 <div class="shadow input-group">
@@ -106,7 +106,7 @@
                     </div> 
                     <input aria-describedby="searchicon" style="text-transform: uppercase;" name="text-search" type="text" class="form-control rounded" placeholder="Search By Name, Phone No, Vehicle No">
                 </div>
-                    
+                     
             </div>
             <div class=" shadow">
                     <input type="submit" class="btn btn-warning " value="Search">
