--- a/flaskapp/templates/admin.html
+++ b/flaskapp/templates/admin.html
@@ -259,7 +259,7 @@ Admin Panel
                                                 <div class="form-row">
                                                     <div class="col">
                                                             <label for="vehicleno">Vehicle No:</label>
-                                                            <input autofocus class="form-control" autocapitalize="True" style="text-transform:uppercase;" placeholder="Vehicle type" type="text" class="form-control" name="vehicleno" required>
+                                                            <input autofocus class="form-control" autocapitalize="True" style="text-transform:uppercase;" placeholder="Vehicle No" type="text" class="form-control" name="vehicleno" required>
                                                     </div>
                                                     <div class="col">
                                                         <label>Vehicle Type:</label>
