Refactored Filenames and Routes

--- a/flaskapp/templates/dataentry-mill.html
+++ b/flaskapp/templates/dataentry-mill.html
@@ -89,7 +89,7 @@ Mill Vehicle Data Entry
                                                     </div>                                                
                                             </div>
                                         
-                                            <div class="form-group form-row">
+                                            <div class="form-group form-row">   
                                                     <label class="col-form-label">Department to:</label>
                                                 <div class="col">
                                                         <select class="form-control" name="dept">
@@ -132,7 +132,7 @@ Mill Vehicle Data Entry
                                                                 <td>{{v.OutTime}}</td>
                                                                 
                                                                     <input type="hidden" value="{{v.id}}" name="vid">
-                                                                    <td><input value="{{v.InTime}}" class="form-control col-7 form-control-sm" type="time"
+                                                                    <td><input value="{{v.InTime}}" class="form-control col form-control-sm" type="time"
                                                                             name="intime" id="intime{{v.id}}"></td>
                                                                     <td><button attributes="{{v.id}}" type="submit" class="updatemill btn btn-sm  btn-warning" value="UPDATE">Update</button>
                                                                     </button></td> 
