--- a/flaskapp/templates/admin.html
+++ b/flaskapp/templates/admin.html
@@ -143,7 +143,7 @@ Admin Panel
                                             <div class="row">
                                                     <div class="col">
                                                             <label for="employeename">Employee Name:</label>
-                                                            <input style="text-transform:uppercase;" placeholder="Employee Name" type="text" class="form-control" name="employeename" required>
+                                                            <input autofocus style="text-transform:uppercase;" placeholder="Employee Name" type="text" class="form-control" name="employeename" required>
                                                     </div>
                     
                                                     <div class="col">
@@ -207,7 +207,7 @@ Admin Panel
                                         <form class="mb-2" method="POST" action="/admin/post/vehicletype">
                                             <h3>Add Vehicle Types</h3>
                                             <label for="vehicletype">VehicleType:</label>
-                                            <input style="text-transform:uppercase;" placeholder="Vehicle type" type="text" class="form-control" name="vehicletype" required>
+                                            <input autofocus style="text-transform:uppercase;" placeholder="Vehicle type" type="text" class="form-control" name="vehicletype" required>
                                             <input type="submit" class="btn btn-block mt-1 btn-primary">
                                         </form>
                                         <table class="table table-sm">
