--- a/flaskapp/templates/dataentry-visitors.html
+++ b/flaskapp/templates/dataentry-visitors.html
@@ -47,7 +47,7 @@ Visitor Data Entry
 
 
         <div class="col-3">
-            <div style="position: fixed;" class="card ml-3">
+            <div  class="card ml-3">
                 <h4 class="card-header text-center">Data Entry</h4>
                 <div class="card-body p-2" >
                     <form id="visitorform" action="/test-postformat/visitor" method="POST" class="form ">
@@ -90,9 +90,9 @@ Visitor Data Entry
                         <!--Visiting Employee Input-->
                         <div class="form-row form-group mb-2">
                             <label class="sr-only">Visiting Employee</label>
-                            <select class="form-control" name="visiting_employee">
+                            <select id="emp" class="form-control" name="visiting_employee">
                                 {% for emp in employees %}
-                                <option value={{emp.id}}>{{emp.employee_name}}</option>
+                                <option id="{{emp.id}}" value={{emp.id}}>{{emp.employee_name}}</option>
                                 {% endfor %}
                             </select>
                         </div>
@@ -133,12 +133,11 @@ Visitor Data Entry
                         <tbody>
                             {% for visitor in today_visitors %}
                             <tr id="datasection{{visitor.id}}">
-                                <td>{{visitor.date.strftime("%d/%m/%Y")}}</td>
+                                
                                 <td>{{visitor.a_timelog.name}}</td>
                                 <td>{{visitor.a_timelog.contact}}</td>
                                 <td>{{visitor.a_timelog.place_from}}</td>
                                 <td>{{visitor.active.visited_employee.employee_name}}</td>
-                                <td>{{visitor.active.visited_dept.department_name}}</td>
                                 <td>{{visitor.in_time}}</td>
 
                                 <td>
@@ -193,4 +192,6 @@ Visitor Data Entry
            $('#placefrom').val(place)
         });
     </script>
+
+    
 {% endblock %}
