--- a/flaskapp/templates/print-visitor-slip.html
+++ b/flaskapp/templates/print-visitor-slip.html
@@ -15,15 +15,15 @@
      <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">
 </head>
 
-<body class="">
-    <div class="m-4 p-2 border border-dark">
+<body style="font-size: 1.2rem;" class="font-weight-bold">
+    <div style="border: 2px solid black;" class="m-4 p-2">
             <div class="main-border w-auto">
                     <div class="mt-3" id="company-name">
-                        <h2 style="font-family: Arial, Helvetica, sans-serif;" class=" text-center font-weight-bold mt-1">Siddhi Vinayak Knots & Prints Pvt. Ltd</h4>
-                        <p  class="text-center text-secondary">A-26 To A-32, "Central Park", G.I.D.C, Pandesara, Surat-394221</p>
+                        <h1 style="font-family: Arial, Helvetica, sans-serif;" class=" text-center font-weight-bold mt-1">Siddhi Vinayak Knots & Prints Pvt. Ltd</h1>
+                        <p  class="text-center h5 mb-3">A-26 To A-32, "Central Park", G.I.D.C, Pandesara, Surat-394221</p>
                     </div>
                     <div class="slip-title">
-                        <h5 class="mt-0 text-center"><span class="border-bottom border-dark">VISITOR'S SLIP</span></h5>
+                        <h4  class="mt-0 text-center font-weight-bold"><span class="border-bottom border-dark">VISITOR'S SLIP</span></h4>
                     </div>
                     
 
@@ -51,7 +51,7 @@
                                     <p class="">Visitor's Name:</p>
                             </div>
                             <div class="col p-0 mb-3  border-bottom">
-                                    <span class=" font-weight-normal">{{visitor.a_timelog.name.title()}} - {{visitor.a_timelog.contact}}</span>
+                                    <span class=" ml-3 font-weight-normal">{{visitor.a_timelog.name.title()}} - {{visitor.a_timelog.contact}}</span>
                             </div>
                         </div>
 
@@ -80,7 +80,7 @@
                                         <div class="col-3 mr-n5 ">
                                                 <p class="">Purpose of Visit:</p>
                                         </div>
-                                        <div class="col mb-3 p-0 text-left   border-bottom">
+                                        <div class=" ml-4 col mb-3 p-0 text-left   border-bottom">
                                                 <span class=" ml-2  font-weight-normal">{{visitor.active.visiting_purpose.title()}}</span>
                                         </div>
                                     </div>        
