--- a/flaskapp/templates/test-dashboard.html
+++ b/flaskapp/templates/test-dashboard.html
@@ -387,7 +387,22 @@
                 });
             }, 2000);
         </script>
-
+        
+        <script>
+                var my_options = $("select option");
+                var selected = $("select").val();
+        
+                my_options.sort(function(a,b) {
+                if (a.text > b.text) return 1;
+                if (a.text < b.text) return -1;
+                return 0
+        })
+        
+            $("select").empty().append( my_options );
+            $("select").val(selected);
+        
+               
+            </script>
         <!-- Scripts that are on extended pages-->
         {% block script  %}
 
